python/src/auth/rabbit/manifest/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  serviceName: "not-applicable"
  selector:
    matchLabels:
      app: rabbitmq
    template:
      metadata:
        labels:
          app: rabbitmq
      spec:
        containers:
          - name: rabbitmq
            image: rabbitmq:3-management
            ports:
              - name: http
                protocol: TCP
                containerPort: 15672
              - name: amqp
                protocol: TCP
                containerPort: 5672
            volumeMounts:
              - mountPath: "/var/lib/rabbitmq"
                name: rabbitmq-volume
          volumes:
            - name: rabbitmq-volume
              persistentVolumeClaim:
                claimName: rabbitmq-pvc
